
function(add_rl_test name source)
    set(compiler_options -g -Wall -Wno-deprecated-copy)
    add_executable(${name})
    target_sources(${name} PRIVATE ${source})
    target_compile_options(${name} PRIVATE ${compiler_options})
endfunction()

function(add_benchmark name source)
    set(compiler_options -O3 -Wall -march=native)
    add_executable(${name})
    target_sources(${name} PRIVATE ${source})
    target_compile_options(${name} PRIVATE ${compiler_options})
    target_link_libraries(${name} PRIVATE benchmark::benchmark)
endfunction()

add_rl_test(condition_waiter_rl_test condition_waiter_rl_test.cpp)
add_rl_test(atrocious_mutex_rl_test atrocious_mutex_rl_test.cpp)
add_rl_test(rcu_0_test rcu_0_test.cpp)
add_rl_test(rcu_1_test rcu_1_test.cpp)
add_rl_test(rcu_2_test rcu_2_test.cpp)
add_rl_test(owner_stealer_rl_test owner_stealer_rl_test.cpp)
add_rl_test(shared_ptr_rl_test shared_ptr_rl_test.cpp)
add_rl_test(rcu_tls_reclaimer_rl_test rcu_tls_reclaimer_rl_test.cpp)
add_rl_test(rcu_3_test rcu_3_test.cpp)

add_benchmark(compare_exchange_vs_two_loads compare_exchange_vs_two_loads.cpp)
